--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Hello, World!</h1>
     <script src="/js/scripts.js"></script>
     
-    <script>fHelloWorld()</script>
+    <!-- <script>fHelloWorld()</script> -->
 
 </body>
 
